--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,3 @@
-body {
-	background-color:#ccc;
-	font-family:Arial, Helvetica, sans-serif;
-	color: #333;
-	font-size: 16px;
-}
-
-h2 {
-	margin-bottom: 0.5em;
-}
-
 .tag-assignment-wrapper {
 	background: #fff;
 	padding: 5px 20px 20px;
@@ -40,10 +29,10 @@ h2 {
 .tag {
 	background: #CA5C00;
 	color: #ffffff;
-	font-size: 16px;
+	font-size: 14px;
 	border-radius: 10px;
-	margin: 0 5px 0 0;
-	padding: 8px;
+	margin: 0 5px 0px 0;
+	padding: 5px;
 }
 
 .tag-clickable {
@@ -56,8 +45,8 @@ h2 {
 
 .tag-remove {
 	color: #ccc;
-	margin-left: 5px;
 	font-family: 'Lucida Console', Monaco, monospace; 
+	padding: 3px;
 }
 
 .tag-remove a,
@@ -66,4 +55,8 @@ h2 {
 .tag-remove a:hover {
 	text-decoration: none;
 	color: #fff;
+}
+
+.clear-both {
+	clear: both;
 }
