--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -3019,19 +3019,19 @@ table th[class*="span"],
 .close {
   float: right;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: normal;
   line-height: 20px;
-  color: #000000;
+  color: #ffffff;
   text-shadow: 0 1px 0 #ffffff;
-  opacity: 0.2;
+  opacity: 0.5;
   filter: alpha(opacity=20);
 }
 
 .close:hover {
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
   cursor: pointer;
-  opacity: 0.4;
+  opacity: 1;
   filter: alpha(opacity=40);
 }
 
