--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+/* Search Results styling */
+
+.search-bar {
+	margin: 5px 0px 5px 0px;
+}
+
 .tag-assignment-wrapper {
 	background: #fff;
 	padding: 5px 20px 20px;
