--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,28 @@ clear-right {
 	margin: 5px 0px 5px 0px;
 }
 
-/* Tag Styling */
+#tagit {
+	position: fixed;
+	top:0px;
+	left:0px;
+	margin-top: 20px;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+}
 
+#screen {
+	position: fixed;
+	width: 100%;
+	height: 200%;
+	left: 0px;
+	top: 0px;
+	opacity: 0.5;
+	background: #000;
+	z-index: 6;
+}
+
+/* Tag Styling */
 .tag-assignment-wrapper {
 	background: #fff;
 	padding: 5px 20px 20px;
